# Projeto-Livros

./: .env  README.md
gerenciador_livros/: .coverage  example.db  pyproject.toml
gerenciador_livros/front/: app.py
gerenciador_livros/gerenciador_livros/: app.py  database.py  models.py  schemas.py  settings.py
gerenciador_livros/migrations/: env.py
gerenciador_livros/migrations/versions/: 091cf8d7847b_create_books_table.py  63c1735c1ce8_create_books_table.py
